# docs/openapi/spec.yaml
@@ -496,6 +496,13 @@ components:
             - text
             - json
           example: text
+        temperature:
+          description: The temperature to use for the response generation.
+          type: number
+          minimum: 0
+          maximum: 1
+          default: 0.5
+          example: 0.5
       example:
         model_name: llama3-8b
         system_prompt: Respond as if you were NASA's chief engineer.
@@ -505,6 +512,7 @@ components:
         exclude_bias_references: true
         excluded_text: Jewish
         format: text
+        temperature: 0.5
     Response:
       type: object
       required:
